@@ -1,1 +1,9 @@
+# -*- coding: utf-8 -*-
 
+'''
+    Star Player Addon
+    Author Twilight0
+
+    SPDX-License-Identifier: GPL-3.0-only
+    See LICENSES/GPL-3.0-only for more information.
+'''
